@@ -45,6 +45,7 @@ SUBDIRS += plugins/indicator/MACD
 SUBDIRS += plugins/indicator/MAOSC
 SUBDIRS += plugins/indicator/MATH
 SUBDIRS += plugins/indicator/MF
+SUBDIRS += plugins/indicator/MINMAX
 SUBDIRS += plugins/indicator/MOM
 SUBDIRS += plugins/indicator/PER
 SUBDIRS += plugins/indicator/PP
@@ -60,6 +61,7 @@ SUBDIRS += plugins/indicator/SZ
 SUBDIRS += plugins/indicator/THERM
 SUBDIRS += plugins/indicator/TRIX
 SUBDIRS += plugins/indicator/UO
+SUBDIRS += plugins/indicator/UTIL
 SUBDIRS += plugins/indicator/VFI
 SUBDIRS += plugins/indicator/VOL
 SUBDIRS += plugins/indicator/VOLR
